--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ quarkus.datasource.jdbc.max-size=16
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.sql-load-script=import.sql
 quarkus.tls.trust-all=true
+quarkus.swagger-ui.always-include=true
