--- a/.github/workflows/github-actions-build-and-publish.yml
+++ b/.github/workflows/github-actions-build-and-publish.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           java-version: 1.11
       - name: Build with Maven
-        run: mvn clean install
+        run: mvn clean
       - name: Execute .mvnw
         run: ./mvnw package
       - name: Publish to Docker Hub
