--- a/.github/workflows/github-actions-build-and-publish.yml
+++ b/.github/workflows/github-actions-build-and-publish.yml
@@ -29,6 +29,6 @@ jobs:
       - name: Publish to Docker Hub
         uses: docker/build-push-action@v4.0.0
         with:
-          file: "{{context}}/src/main/docker/Dockerfile.jvm"
+          file: "/src/main/docker/Dockerfile.jvm"
           push: true
           tags: pedrodiaz/bq-ms-customer:${{github.run_number}}
